# ejer_SPEC

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  start-backend.bat  start-dev.bat  start-frontend.bat  vercel.json
.agents/skills/observe-whatsapp/: package-lock.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_create_personas.py
backend/app/: main.py
backend/app/api/: personas.py  whatsapp.py
backend/app/core/: config.py
backend/app/db/: client.py  session.py
backend/app/models/: persona.py
backend/app/observability/: setup.py
backend/app/schemas/: __init__.py  persona.py
backend/app/services/: personas.py  whatsapp_service.py
backend/scripts/: send_whatsapp.py
backend/tests/: conftest.py  test_personas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: personas.js  whatsapp.js
frontend/src/components/: BuscadorPersonas.jsx  BuscadorPersonas.test.jsx  EmptyState.jsx  ErrorState.jsx  PersonaForm.jsx  PersonaForm.test.jsx  PersonasList.jsx  TopBar.jsx
frontend/src/pages/: EnvioWhatsapp.jsx  HomePage.jsx  PersonasPage.jsx
frontend/src/styles/: global.css
prueba/: crear_tablas.py  envio.py  insert_supabase.py  requirements.txt
specs/: mission.md  roadmap.md  tech-stack.md
(+24 files in other folders)
