[project]
name = "ejer-spec-backend"
version = "0.1.0"
description = "Backend FastAPI para gestion interna de personas"
requires-python = ">=3.13,<3.15"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "sqlalchemy>=2.0.40,<2.1.0",
  "alembic>=1.15.0,<1.16.0",
  "pydantic-settings>=2.8.0,<2.9.0",
  "opentelemetry-api>=1.33.0,<1.34.0",
  "opentelemetry-sdk>=1.33.0,<1.34.0",
  "opentelemetry-instrumentation-fastapi>=0.54b0,<0.55b0",
  "opentelemetry-instrumentation-asgi>=0.54b0,<0.55b0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
